# web-scraper

./: README.md  pyproject.toml  scraper.py  scraper_nb.ipynb
tests/: test_citation_needed.py
