[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["majedalswaeer <majedalswaeer69@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.10b0", allow-prereleases = true}
flake8 = {version = "^4.0.1", allow-prereleases = true}
requests = {version = "^2.26.0", allow-prereleases = true}
beautifulsoup4 = {version = "^4.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
